feat: configurable CORS via FLAGGY_CORS env variable
Disable built-in CORS when behind a reverse proxy (Oathkeeper, Traefik)
to avoid duplicate Access-Control-Allow-Origin headers.
Enabled by default, set FLAGGY_CORS=false to disable.

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ FLAGGY_DB_PATH=flaggy.db
 # CLI — used by bin/flaggy to reach the server
 FLAGGY_SERVER=http://localhost:8080
 
+# CORS — set to "false" to disable (when behind a reverse proxy like Oathkeeper)
+FLAGGY_CORS=true
+
 # Auth — if unset, auth is disabled (dev mode)
 FLAGGY_MASTER_KEY=
